Fixed EditorPage controls height on iOS.

--- a/src/styles/editor-page.scss
+++ b/src/styles/editor-page.scss
@@ -33,6 +33,7 @@
 		flex-flow: column nowrap;
 		max-width: $md;
 		height: 95vh;
+		height: 95dvh;
 		max-height: $md;
 		border-width: 1px 1px 0;
 		border-style: solid;
